<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/img"
    tools:context=".DrawableItems.Help">

    <TextView
        style="@style/headline_style"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:text="@string/Tx1"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tx2"
                android:textSize="23sp"
                android:fontFamily="@font/lexend_deca"
                android:textStyle="bold"
                android:textColor="@color/gray"
                android:paddingBottom="16dp"/>

            <TextView
                style="@style/support_style"
                android:text="@string/Tx3" />

            <TextView
                style="@style/support_style"
                android:text="@string/Tx4"
                android:paddingLeft="16dp"/>

            <TextView
                style="@style/support_style"
                android:text="@string/Tx5"
                android:paddingTop="16dp"/>

            <TextView
                style="@style/support_style"
                android:text="@string/Tx6"
                android:paddingLeft="16dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tx7"
                android:textSize="23sp"
                android:textColor="@color/gray"
                android:textStyle="bold"
                android:fontFamily="@font/lexend_deca"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"/>

            <TextView
                style="@style/support_style"
                android:text="@string/Tx8" />

            <TextView
                style="@style/support_style"
                android:text="@string/Tx9"
                android:paddingLeft="16dp"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>