<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="#879199"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profile_background"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/img"
        android:scaleType="centerCrop"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_marginTop="-60dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/img_1"
            android:scaleType="centerCrop"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginStart="16dp">

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:text="@string/email"
                android:layout_marginTop="15dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/userType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lexend_deca"
                android:textStyle="bold"
                android:layout_marginTop="3dp"
                android:text="@string/userType"
                android:textColor="@color/btnStart"
                android:textSize="19sp"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>

    <!-- Other profile information -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/details"
            style="@style/headline_style"
            android:text="@string/profile_info"
            android:textColor="@color/VeryDarkGray"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/profile_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:text="@string/freeText"/>

    </LinearLayout>
</LinearLayout>